@startuml

' List entities with their notes -------------------------------------

package errors <<Frame>> #E0EBF5 {

    interface error {
        +Error() string
    }

}

package eliteConfiguration <<Frame>> #DD {

    note as packageMethods
        +Default() API
        +Mutable() API
        +Immutable() API
        +Version() string
    end note

    interface API {
        +New(requiredName string) Configuration
        +Load(fileName string) (Configuration, error)
        +Save(configuration Configuration, fileName string) error
    }

    interface Configuration {
        +Name() string
        +SetName(name string) Configuration
        +Value(name string) (interface{}, error)
        +ValueWithDefault(name string, defaultValue interface{}) interface{}
        +Add(name string, value interface{}) Configuration
        +Remove(name string) Configuration
        +Size() int
        +Property(name string) Property
        +HasProperty(name string) bool
        +AddProperty(property Property) Configuration
        #newProperty(name string, value interface{}) Property
        #properties() map[string]Property
    }

    interface Property {
        +Name() string
        +Value() interface{}
        +WithDefault(defaultValue interface{}) Property
    }

    class marshallableConfiguration {
        +NameAttr string
        +PropertiesAttr map[string]Property
    }

    class immutableState {
    }
    note right : used by Default

    class immutableConfiguration {
        #iName string
        #iProperties map[string]Property
        #iDefaultValue interface{}
    }

    class immutableProperty {
        #iName string
        #iValue interface{}
    }

    class mutableState {
    }

    class mutableConfiguration {
        #iName string
        #iProperties map[string]Property
        #iDefaultValue interface{}
    }

    class mutableProperty {
        #iName string
        #iValue interface{}
    }

    class marshallableProperty {
        +NameAttr string
        +ValueAttr interface{}
    }

    class configurationError {
        #message string
        #cause error
    }

}


' List relationships -------------------------------------------------

eliteConfiguration +-- errors

API <|.. immutableState
API <|.. mutableState
Configuration <|.. immutableConfiguration
Configuration <|.. mutableConfiguration
error <|.. configurationError
Property <|.. immutableProperty
Property <|.. mutableProperty
Configuration *--- "*" Property : contains >
marshallableConfiguration *-- "*" marshallableProperty : contains >
immutableConfiguration *-- "*" immutableProperty : contains >
mutableConfiguration *-- "*" mutableProperty : contains >


' Plant UML configuration --------------------------------------------

title
    EliteConfiguration Class Diagram
endtitle

legend center
    EliteSystems&#169; 2016
endlegend

hide empty members
hide empty fields
hide empty methods

@enduml